feat: typing improvement pagingation type in swagger (#1576)
